[gd_scene load_steps=12 format=3 uid="uid://bp3mkt6r82voo"]

[ext_resource type="Script" path="res://scenes/Menus.gd" id="1_o5mua"]
[ext_resource type="FontFile" uid="uid://ddmsbwqyya44t" path="res://art/m6x11.ttf" id="2_blrtl"]
[ext_resource type="PackedScene" uid="uid://c67mu3qkdsf8a" path="res://scenes/start_screen.tscn" id="2_uc8ni"]
[ext_resource type="Theme" uid="uid://b0gks4806w8al" path="res://scenes/menus.tres" id="3_aqdmj"]
[ext_resource type="PackedScene" uid="uid://bjvj1gux5vqm5" path="res://scenes/main_menu.tscn" id="3_jm744"]
[ext_resource type="Texture2D" uid="uid://bqjkmi0odbocm" path="res://art/popupMenu.png" id="4_2jht0"]
[ext_resource type="PackedScene" uid="uid://dffcqo1e57tl" path="res://scenes/pause_menu.tscn" id="8_n3snx"]

[sub_resource type="LabelSettings" id="LabelSettings_4t0im"]
font = ExtResource("2_blrtl")
font_size = 48
font_color = Color(0.67451, 0.196078, 0.196078, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wknwg"]
font = ExtResource("2_blrtl")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0dqla"]

[sub_resource type="LabelSettings" id="LabelSettings_tbeqy"]
font = ExtResource("2_blrtl")
font_size = 32
font_color = Color(0.984314, 0.94902, 0.211765, 1)

[node name="Menus" type="Control"]
visibility_layer = 524288
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5mua")

[node name="StartScreen" parent="." instance=ExtResource("2_uc8ni")]
layout_mode = 1

[node name="MainMenu" parent="." instance=ExtResource("3_jm744")]
layout_mode = 1

[node name="PauseMenu" parent="." instance=ExtResource("8_n3snx")]
layout_mode = 1

[node name="GameOverMenu" type="Control" parent="."]
visible = false
visibility_layer = 524288
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -96.0
offset_right = 144.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Frame" type="TextureRect" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -112.0
offset_right = 144.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_2jht0")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
visibility_layer = 524288
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -69.0
offset_right = 94.5
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="GameOver" type="Label" parent="GameOverMenu/VBoxContainer"]
visibility_layer = 524288
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_4t0im")
horizontal_alignment = 1

[node name="Score" type="Label" parent="GameOverMenu/VBoxContainer"]
visibility_layer = 524288
layout_mode = 2
text = "Score: 123"
label_settings = SubResource("LabelSettings_wknwg")
horizontal_alignment = 1

[node name="TryAgainContainer" type="CenterContainer" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2

[node name="TryAgainButton" type="Button" parent="GameOverMenu/VBoxContainer/TryAgainContainer"]
visibility_layer = 524288
layout_mode = 2
focus_neighbor_top = NodePath("../../MainMenuContainer/MainMenuButton")
theme = ExtResource("3_aqdmj")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_0dqla")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0dqla")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0dqla")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0dqla")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0dqla")
text = "TRY AGAIN"

[node name="MainMenuContainer" type="CenterContainer" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="GameOverMenu/VBoxContainer/MainMenuContainer"]
visibility_layer = 524288
layout_mode = 2
focus_neighbor_bottom = NodePath("../../TryAgainContainer/TryAgainButton")
theme = ExtResource("3_aqdmj")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_0dqla")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0dqla")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0dqla")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0dqla")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0dqla")
text = "MAIN MENU"

[node name="NewHighScore" type="Label" parent="GameOverMenu"]
visibility_layer = 524288
layout_mode = 2
offset_top = -64.0
offset_right = 288.0
grow_horizontal = 2
grow_vertical = 0
text = "New High Score!"
label_settings = SubResource("LabelSettings_tbeqy")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mute" from="MainMenu" to="." method="_on_options_menu_mute"]
[connection signal="quit" from="MainMenu" to="." method="_on_main_menu_quit"]
[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="worm_mode" from="MainMenu" to="." method="_on_options_menu_worm_mode"]
[connection signal="main_menu" from="PauseMenu" to="." method="_on_main_menu_button_pressed"]
[connection signal="mute" from="PauseMenu" to="." method="_on_options_menu_mute"]
[connection signal="resume" from="PauseMenu" to="." method="_on_resume_button_pressed"]
[connection signal="worm_mode" from="PauseMenu" to="." method="_on_options_menu_worm_mode"]
[connection signal="pressed" from="GameOverMenu/VBoxContainer/TryAgainContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="GameOverMenu/VBoxContainer/MainMenuContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
